--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nuxt/content": "^3.8.2",
     "@nuxt/image": "^2.0.0",
     "@nuxt/ui": "^4.1.0",
+    "@nuxtjs/google-adsense": "^3.0.0",
     "@nuxtjs/supabase": "^2.0.1",
     "@standard-schema/spec": "^1.0.0",
     "@vercel/analytics": "^1.5.0",
@@ -24,6 +25,7 @@
     "@vueuse/nuxt": "^14.0.0",
     "better-sqlite3": "^12.4.1",
     "nuxt": "^4.2.1",
+    "nuxt-jsonld": "^2.2.1",
     "nuxt-og-image": "^5.1.12",
     "pnpm": "^10.22.0",
     "zod": "^4.1.12"
