--- a/content/0.index.yml
+++ b/content/0.index.yml
@@ -1,180 +1,150 @@
-title: Learn [Salesforce CRM Analytics]{class="text-primary"} from Scratch
-description: Learn Salesforce CRM Analytics (formerly Einstein Analytics / Tableau CRM / Wave) from scratch with real Salesforce org examples, production-ready dashboards, and hands-on projects designed for admins, consultants, and analysts.
+title: Ship Your [SaaS]{class="text-primary"} at light speed
+description: Build production-ready SaaS applications with Nuxt UI's powerful components, authentication flows, and enterprise features. The same component library trusted by the entire Nuxt ecosystem.
 seo:
-  title: Salesforce CRM Analytics Training (Beginner to Advanced)
-  description: Learn Salesforce CRM Analytics from zero. Build datasets, dataflows/recipes, lenses, dashboards, SAQL queries, bindings, row-level security, Einstein Discovery stories, and Lightning-embedded analytics with real-world projects.
+  title: Nuxt UI SaaS Template
+  description: Create stunning, fast and production-ready SaaS applications with Nuxt UI. 100+ Vue components, authentication, dark mode, and enterprise features built on Tailwind CSS.
 navigation: false
-
 hero:
-  orientation: horizontal
   links:
-    - label: Start Learning CRM Analytics
+    - label: Get started
       icon: i-lucide-arrow-right
       trailing: true
-      to: https://crm-analytics-academy.com
+      to: https://ui.nuxt.com/docs/getting-started/installation/nuxt
       target: _blank
       size: xl
-    - label: View GitHub Resources
+    - label: Use this template
       icon: i-simple-icons-github
       size: xl
       color: neutral
       variant: subtle
-      to: https://github.com/imswarnil/crm-analytics-academy
+      to: https://github.com/nuxt-ui-templates/saas
       target: _blank
-
-stepper:
-  title: Your Salesforce CRM Analytics Learning Path
-  description: Follow this guided path from zero to production-ready dashboards in a real Salesforce org.
-  items:
-    - title: 1. Get Your Org Ready
-      description: Enable CRM Analytics, assign licenses, and explore Analytics Studio.
-      icon: i-lucide-rocket
-    - title: 2. Create Datasets
-      description: Connect Salesforce objects, upload CSVs, and design clean, reusable datasets.
-      icon: i-lucide-database
-    - title: 3. Build Dashboards
-      description: Create lenses, dashboards, and tweak JSON layouts for real business questions.
-      icon: i-lucide-layout-dashboard
-    - title: 4. Dataflows & Recipes
-      description: Automate transforms, schedule refreshes, and monitor data jobs like a pro.
-      icon: i-lucide-home
-    - title: 5. SAQL & Bindings
-      description: Write SAQL, add advanced bindings, and implement row-level security (RLS).
-      icon: i-lucide-code-2
-    - title: 6. Einstein & Embedding
-      description: Build Einstein Discovery stories and embed analytics into Lightning pages and apps.
-      icon: i-lucide-brain
-
 sections:
-  - title: Learn CRM Analytics the Right Way
-    description: Stop guessing your way through Salesforce CRM Analytics. Follow a structured path that takes you from enabling the app to shipping dashboards your stakeholders will actually use.
+  - title: Powered by Nuxt UI Components
+    description: Access the complete Nuxt UI component library with 100+ beautifully styled, accessible, and customizable Vue components. Everything you need to build professional SaaS applications.
     id: features
     orientation: horizontal
     features:
-      - name: Real Salesforce Org Demos
-        description: Watch step-by-step lessons built in a real Salesforce org so you can mirror the same setup in your sandbox or developer edition.
+      - name: 100+ UI Components
+        description: From buttons to modals, data tables to forms - all styled with Tailwind CSS and accessible out of the box.
         icon: i-lucide-package
-      - name: Admin, Consultant & Analyst Friendly
-        description: Whether you manage orgs, design solutions, or build reports, the content is tailored to common Salesforce roles and use cases.
+      - name: Authentication Ready
+        description: Pre-built login, signup, and password reset flows. Just connect your backend and start onboarding users.
         icon: i-lucide-shield
-      - name: Hands-on, Not Just Theory
-        description: Every concept is tied to a lens, dashboard, or dataflow you’ll actually build, modify, and understand end-to-end.
+      - name: TypeScript First
+        description: Full TypeScript support with auto-completion, type safety, and IntelliSense for every component and composable.
         icon: i-lucide-code-2
-
-  - title: Built for the Salesforce Ecosystem
-    description: This training fits naturally into your existing Salesforce workflow. From Sales Cloud to custom objects, you’ll learn how to turn your org data into clear, actionable insights.
+  - title: Built for Modern SaaS
+    description: Everything you need to launch and scale your SaaS. From beautiful marketing pages to complex dashboards, ship faster with production-ready patterns.
     orientation: horizontal
     reverse: true
     features:
-      - name: Production-Ready Dashboards
-        description: Design dashboards for sales, service, pipeline, and leadership that are fast, clean, and performance-aware.
+      - name: Edge Performance
+        description: Optimized for Core Web Vitals with automatic code splitting, lazy loading, and SSR/SSG support.
         icon: i-lucide-zap
-      - name: Performance & Governance
-        description: Learn best practices for row-level security, data volume, and monitoring so your analytics stay reliable at scale.
+      - name: Dark Mode Ready
+        description: Automatic theme switching with smooth transitions. Respects system preferences and remembers user choice.
         icon: i-lucide-moon
-      - name: Real Use Cases & Templates
-        description: Reuse ready-made patterns for executive summaries, pipeline reviews, forecasting, health tracking, and more.
+      - name: Global Ready
+        description: Built-in i18n support for 50+ languages with RTL/LTR layouts and @nuxt/fonts integration.
         icon: i-lucide-globe
-
 features:
-  title: What You’ll Learn Inside CRM Analytics Academy
-  description: A complete Salesforce CRM Analytics curriculum—from the first dataset to Einstein Discovery and Lightning embedding—designed to help you ship dashboards that people actually open.
+  title: Everything You Need to Ship
+  description: Stop building from scratch. Focus on your unique features while Nuxt UI handles the foundations with battle-tested components and patterns.
   items:
-    - title: Datasets & Data Modeling
-      description: Learn how to bring Salesforce objects, CSVs, and external data together into clean, reusable datasets and apps.
-      icon: i-lucide-database
-    - title: Lenses & Dashboards
-      description: Build lenses, dashboards, and responsive layouts that answer real business questions with minimal clicks.
-      icon: i-lucide-layout-dashboard
-    - title: Dataflows & Recipes
-      description: Use dataflows and recipes to transform, join, aggregate, and schedule data refreshes without breaking your org.
-      icon: i-lucide-home
-    - title: SAQL & Advanced Bindings
-      description: Go beyond clicks with SAQL, bindings, dynamic filters, and interactions that make dashboards truly interactive.
-      icon: i-lucide-code-2
-    - title: Security, RLS & Governance
-      description: Implement row-level security, app access, and governance patterns so each user only sees what they should.
-      icon: i-lucide-shield
-    - title: Einstein Discovery & Embedding
-      description: Create Einstein Discovery stories and embed CRM Analytics directly in Lightning pages and apps your users live in.
-      icon: i-lucide-brain
-
+    - title: Beautiful Design System
+      description: Semantic color aliases, comprehensive design tokens, and Tailwind Variants for consistent, customizable styling.
+      icon: i-lucide-palette
+    - title: Accessible by Default
+      description: Built on Reka UI for robust accessibility. WCAG compliant components that work for everyone, everywhere.
+      icon: i-lucide-accessibility
+    - title: Developer Experience
+      description: Auto-imports, hot module replacement, and comprehensive documentation. Build faster with less friction.
+      icon: i-lucide-terminal
+    - title: SEO Optimized
+      description: Server-side rendering, automatic meta tags, sitemap generation, and Open Graph images out of the box.
+      icon: i-lucide-search
+    - title: Production Ready
+      description: Error handling, loading states, form validation, and security best practices built into every component.
+      icon: i-lucide-check-circle
+    - title: Infinitely Customizable
+      description: Override any style with the ui prop, customize globally with AppConfig, or use Tailwind classes directly.
+      icon: i-lucide-settings
 testimonials:
-  headline: Trusted by Salesforce Professionals
-  title: Learn from Real-World CRM Analytics Implementations
-  description: Hear from admins, consultants, and developers who used these patterns to move beyond standard reports and build analytics that leadership actually cares about.
+  headline: Trusted by Developers
+  title: Join Thousands Building with Nuxt UI
+  description: See why developers choose Nuxt UI to ship their SaaS applications faster and with more confidence.
   items:
-    - quote: This training finally connected the dots between Salesforce data and real dashboards. I went from ‘where do I click?’ to shipping a sales performance app in my org.
+    - quote: Nuxt UI transformed how we build. The component quality is exceptional - everything just works with perfect TypeScript support, accessibility, and dark mode built in.
       user:
         name: Sarah Chen
-        description: Salesforce Admin & Analytics Champion
+        description: CTO at TechScale Solutions
         avatar:
           src: https://i.pravatar.cc/120?img=1
-    - quote: As a consultant, I needed repeatable patterns. The way datasets, recipes, and dashboards are structured here made it easy to reuse for multiple clients.
+    - quote: We shipped our MVP in 2 weeks instead of 2 months. The authentication flows and form components saved us countless hours of development time.
       user:
         name: Marcus Rodriguez
-        description: Salesforce Consultant
+        description: VP of Engineering at DataFlow
         avatar:
           src: https://i.pravatar.cc/120?img=7
-    - quote: The focus on governance and RLS helped us avoid messy access issues. Our dashboards are cleaner, faster, and finally aligned with our security model.
+    - quote: The design system with AppConfig is brilliant. We maintain brand consistency across all our products while leveraging the full component library.
       user:
         name: David Kumar
-        description: Salesforce Platform Owner
+        description: Security Director at SecureStack
         avatar:
           src: https://i.pravatar.cc/120?img=3
-    - quote: I’d been stuck at the ‘play around’ stage for months. These lessons pushed me into actually designing analytics for our exec team with confidence.
+    - quote: Perfect Lighthouse scores out of the box. Our Core Web Vitals improved dramatically just by switching to Nuxt UI components.
       user:
         name: Emily Zhang
-        description: Business Analyst
+        description: Lead Architect at ScaleForce
         avatar:
           src: https://i.pravatar.cc/120?img=5
-    - quote: The SAQL and bindings section alone was worth it. I finally understand how to make dashboards react to user selections the way product managers expect.
+    - quote: The Tailwind Variants system makes customization so intuitive. We can override any component style while keeping the functionality intact.
       user:
         name: James Wilson
-        description: Salesforce Developer
+        description: DevOps Lead at CloudPro
         avatar:
           src: https://i.pravatar.cc/120?img=8
-    - quote: Having end-to-end examples—from dataset to embedded Lightning page—helped us standardize how we build analytics in our org.
+    - quote: From the SaaS template to production in days. The pre-built layouts, navigation, and content structure accelerated our launch.
       user:
         name: Lisa Patel
-        description: Head of RevOps
+        description: CEO at AutoScale
         avatar:
           src: https://i.pravatar.cc/120?img=9
-    - quote: The training doesn’t skip over the boring but important bits like monitoring, logs, and data refresh issues. That’s what made it feel production-ready.
+    - quote: Reka UI foundation means accessibility is never an afterthought. We achieved WCAG compliance without any custom work.
       user:
         name: Michael Torres
-        description: Senior Salesforce Engineer
+        description: Frontend Lead at AccessFirst
         avatar:
           src: https://i.pravatar.cc/120?img=11
-    - quote: I finally have a clear learning path instead of random Trailhead modules and YouTube videos. Everything builds on the previous lesson.
+    - quote: The documentation is outstanding. Every component has clear examples, and the community on Discord is incredibly helpful.
       user:
         name: Rachel Kim
-        description: Salesforce Functional Consultant
+        description: Performance Engineer at APIHub
         avatar:
           src: https://i.pravatar.cc/120?img=10
-    - quote: The examples use language leadership understands. It made it easier for me to present dashboards and get buy-in for more analytics work.
+    - quote: We replaced three different UI libraries with Nuxt UI. The consistency and quality across all components is unmatched.
       user:
         name: Thomas Weber
-        description: Analytics Lead
+        description: UI Architecture Lead at DesignScale
         avatar:
           src: https://i.pravatar.cc/120?img=12
-    - quote: As someone who comes from core Salesforce, this course removed the fear around CRM Analytics and made it feel like a natural extension of the platform.
+    - quote: The integration with Nuxt modules is seamless. Color mode, fonts, icons - everything works together perfectly.
       user:
         name: Sophia Martinez
-        description: Salesforce Solution Architect
+        description: Integration Specialist at TechFlow
         avatar:
           src: https://i.pravatar.cc/120?img=14
-
 cta:
-  title: Ready to Master Salesforce CRM Analytics?
-  description: Start learning today and move from basic reports to production-ready dashboards, dataflows, and Einstein-powered insights inside your Salesforce org.
+  title: Ready to build an amazing SaaS?
+  description: Join thousands of developers building with Nuxt and Nuxt UI. Get this template and start shipping today.
   links:
-    - label: Start Learning CRM Analytics
-      to: 'https://crm-analytics-academy.com'
+    - label: Start building
+      to: 'https://ui.nuxt.com/docs/getting-started/installation/nuxt'
       target: _blank
       trailingIcon: i-lucide-arrow-right
-    - label: View GitHub Resources
-      to: 'https://github.com/imswarnil/crm-analytics-academy'
+    - label: View on GitHub
+      to: 'https://github.com/nuxt-ui-templates/saas'
       target: _blank
       variant: subtle
       icon: i-simple-icons-github
